--- a/9364A-G6/src/links/midterms.html
+++ b/9364A-G6/src/links/midterms.html
@@ -445,7 +445,104 @@
                         <h1>JavaScript</h1>
                     </div>
                     <div class="cont">
-                        <!-- INSERT JAVASCRIPT CONTENTS HERE-->
+                        <ul>
+                            <li>The LiveScript language was designed at Netscape Communications to make the Java support in Netscape Navigator more accessible to non-Java programmers. LiveScript, like any scripting language, is a loosely-typed language. It is intended for a large audience of Web designers and developers.</li>
+                            <li>In December 1995, LiveScript was renamed JavaScript and released as part of Netscape Navigator 2.0. Except for marketing purposes, JavaScript has nothing to do with the Java language developed and maintained by Sun Microsystems. The Web community started then to manipulate the content of Web documents, in order to bring interactivity and typography to the formerly static Web.</li>
+                            <li><strong>Developer:</strong> Netscape Communications Corporation, Mozilla Foundation, Ecma International</li>
+                        </ul>
+                        <h3>ECMAScript Editions</h3>
+                      <ul>
+                          <li><strong>ECMAScript 1</strong> - Was developed in the year <strong>1997</strong>,First edition of ECMAScript.</li>
+                          <li><strong>ECMAScript 2</strong> - Was developed in the year <strong>1998</strong>,Editorial changes.</li>
+                          <li><strong>ECMAScript 3</strong> - Was developed in the year <strong>1999</strong>,Added Regular expressions and added the try catch.</li>
+                          <li><strong>ECMAScript 4</strong> - was never released.</li>
+                          <li><strong>ECMAScript 5</strong> - Was developed in the year <strong>2009</strong>,Added "strict mode" and added Json support.</li>
+                          <li><strong>ECMAScript 5.1</strong> - Was developed in the year <strong>2011</strong>,Editorial changes.</li>
+                          <li><strong>ECMAScript 6</strong> - Was developed in the year <strong>2015</strong>, Added classes and modules.</li>
+                          <li><strong>ECMAScript 7</strong> - Was developed in the year <strong>2016</strong>, Added exponential operator (**) and added array.prototype.includes</li>
+                      </ul> 
+                            
+                        <h3>JavaScript Execution Environment</h3>                       
+                        <ul>
+                            <li>Core JavaScript(EcmaScript) Language Api</li>
+                            <li>(Traditional) Browser Object Model(BOM)Api</li>
+                            <ul>
+                             <li> Window,Navigator,Screen,Location,History</li>   
+                            </ul>
+                        </ul>
+                        <h3>Document Object Model (DOM) API</h3>
+                        <ul>
+                            <li>API that allows access to the HTML document from within scripts associated with the web page</li>
+                            <li>a parsed HTML document is represented by a <a href="https://www.w3schools.com/js/js_htmldom.asp">DOM tree</a>, which contains nodes representing elements, element attributes, tectual content and other HTML document components</li>
+                            <li>Can be accessed via the Document object property</li>
+                        </ul>
+                        <h3>Functionalities</h3>
+                        <ul>
+                            <li>Retrieve references to node (or node collection)</li>
+                            <ul>
+                                <li>getElementById()</li>
+                                     <div class="code-sample">
+                                        <span class="comment">// getElementById()</span><br>
+                                        <span class="indent"> var myElement = document.getElementById("Hello");</span><br>
+                                                                    
+                                    </div>
+                                <li>getElementsByTagName(), getElementsByClassName()</li>
+                                     <div class="code-sample">
+                                        <span class="comment">// getElementByTagName()</span><br>
+                                        <span class="indent"> var x = document.getElementsByTagName("p");</span><br>                                     
+                                    </div>
+                                     <div class="code-sample">
+                                        <span class="comment">// getElementByClassName()</span><br>
+                                        <span class="indent"> var x = document.getElementsByClassName("intro");</span><br>                                     
+                                    </div>                                                                     
+                                <li>querySelector(), querySelectorAll()</li>
+                                     <div class="code-sample">
+                                        <span class="comment">// querySelector()</span><br>
+                                        <span class="indent"> var x = document.querySelector("p.intro");</span><br>                                     
+                                    </div>
+                                     <div class="code-sample">
+                                        <span class="comment">// querySelectorAll()</span><br>
+                                        <span class="indent"> var x = document.querySelectorAll("p.intro");</span><br>                                     
+                                    </div>                                                                       
+                            </ul>
+                            <li>Child Nodes</li>
+                            <ul>
+                                <li>firstChild,lastChild,nextSibling,previousSibling</li>
+                                     <div class="code-sample">
+                                        <span class="comment">// firstChild</span><br>
+                                        <span class="indent">var x = document.getElementById("myList").firstChild.innerHTML;</span><br>                      
+                                    </div>
+                                     <div class="code-sample">
+                                        <span class="comment">// lastChild</span><br>
+                                        <span class="indent">var x = document.getElementById("myList").lastChild.innerHTML;</span><br>                       
+                                    </div>
+                                     <div class="code-sample">
+                                        <span class="comment">// nextSibling</span><br>
+                                        <span class="indent">var x = document.getElementById("item1").nextSibling.innerHTML;</span><br>                                     
+                                    </div>
+                                     <div class="code-sample">
+                                        <span class="comment">// previousSibling</span><br>
+                                        <span class="indent">var x = document.getElementById("item2").previousSibling.innerHTML;</span><br>                                     
+                                    </div>                                                                                                                                            
+                                <li>firstElementChild,lastElementChild,nextElementSibling,previousElementSibling</li>
+                                     <div class="code-sample">
+                                        <span class="comment">// firstElementChild</span><br>
+                                        <span class="indent">var x = document.getElementById("myList").firstElementChild.innerHTML;</span><br>                                     
+                                    </div>  
+                                     <div class="code-sample">
+                                        <span class="comment">// lastElementChild</span><br>
+                                        <span class="indent">var x = document.getElementById("myList").lastElementChild.innerHTML;</span><br>                                     
+                                    </div>  
+                                     <div class="code-sample">
+                                        <span class="comment">// nextElementSibling</span><br>
+                                        <span class="indent">var x = document.getElementById("item1").nextElementSibling.innerHTML;</span><br>                                     
+                                    </div>  
+                                     <div class="code-sample">
+                                        <span class="comment">// previousElementSibling</span><br>
+                                        <span class="indent">var x = document.getElementById("item2").previousElementSibling<br>.innerHTML;</span><br>                                     
+                                    </div>                                                                                                                                              
+                            </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
